# website

./: .gitignore  .gitmodules  Mine.bib  go.mod  go.sum  netlify.toml  pyproject.toml  website.code-workspace
.github/workflows/: bucket_publish.yml  bucket_pull_request.yml  bucket_remove.yml  update_dnslink.yml
.textile/: config.yml
assets/: jsconfig.json
assets/scss/: custom.scss
config/_default/: config.toml  menus.toml  params.toml
config/_default/.forestry/: settings.yml
content/: privacy.md
content/author/admin/: _index.md
content/authors/admin/: _index.md
content/home/: experience.md  posts.md  projects.md  publications.md  tags.md
content/post/decentralized-site/: index.md
content/post/fri-user-guide/: Guide.md  index.md
content/post/reproducible-experiments/: index.md
content/project/app-adverse-drug-interaction/: index.md
content/project/edit-distance/: index.md
content/project/fri/: index.md
content/project/kmeans-opencl/: index.md
content/project/sublimator-controller/: index.md
content/publication/gopfert-2018/: cite.bib  index.md
content/publication/gopfert-feature-relevance-bounds-2017/: cite.bib  gopfert-feature-relevance-bounds-2017.bib  index.md
content/publication/gopfert-interpretationlinearclassifiers-2018/: gopfert-interpretationlinearclassifiers-2018.bib  index.md
content/publication/pfannschmidt-feature-relevance-bounds-2019-a/: index.md  (+1 more)
content/talk/cibc19/: index.md
data/: page_sharer.toml
data/fonts/: local.toml
data/themes/: my_minimal.toml
layouts/partials/: custom_head.html  custom_js.html
(+13 files in other folders)
