[tool.poetry]
name = "lpfannwebsite"
version = "0.1.0"
description = ""
authors = ["Lukas Pfannschmidt <lukas@lpfann.me>"]

[tool.poetry.dependencies]
python = "^3.7"
academic = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
