[tool.poetry]
name = "lpannwebsite"
version = "0.1.0"
description = ""
authors = ["Lukas Pfannschmidt <lukas@lpfann.me>"]

[tool.poetry.dependencies]
python = "^3.7"
academic = {path = "../../academic-admin"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
